<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar_id"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@mipmap/ic_launcher_foreground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aladin"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/Widget.AppCompat.Toolbar"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="auto"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar_id"
        app:layout_constraintVertical_bias="0.00999999">

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_textview"
            android:fontFamily="@font/eagle_lake"
            android:hint="@string/resultado"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkAortica"
            app:layout_constraintVertical_bias="0.20999998" />

        <ScrollView
            android:id="@+id/scrollView_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rootLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="700dp"
                android:paddingBottom="128dp"
                tools:context=".ui.MainActivity">


                <TextView
                    android:id="@+id/textViewEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edad"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextEdad"
                    app:layout_constraintStart_toStartOf="@+id/guideline" />

                <EditText
                    android:id="@+id/editTextEdad"
                    android:layout_width="33dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:autofillHints=""
                    android:clickable="false"
                    android:cursorVisible="true"
                    android:duplicateParentState="false"
                    android:ems="10"
                    android:hint="@string/_00"
                    android:inputType="number"
                    android:maxLength="2"
                    android:selectAllOnFocus="true"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewEdad"
                    app:layout_constraintStart_toEndOf="@+id/textViewEdad" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sexo"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewEdad" />

                <Spinner
                    android:id="@+id/spSexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:entries="@array/a_sexo"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/funci_n_renal"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <Spinner
                    android:id="@+id/spFuncionR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/a_funcion_renal"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

                <CheckBox
                    android:id="@+id/chkArteriopatia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="false"
                    android:text="@string/arteriopat_a_perif_rica"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <CheckBox
                    android:id="@+id/chkMovilidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/movilidad_disminuida"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/chkArteriopatia" />

                <CheckBox
                    android:id="@+id/chkCirugiaPrevia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/cirug_a_card_aca_previa"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/chkMovilidad" />

                <CheckBox
                    android:id="@+id/chkEpoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/epoc"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/chkCirugiaPrevia" />

                <CheckBox
                    android:id="@+id/chkEndocarditis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/endocarditis_activa"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/chkEpoc" />

                <CheckBox
                    android:id="@+id/chkCritico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/paciente_cr_tico"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/chkEndocarditis" />

                <CheckBox
                    android:id="@+id/chkDiabetes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/diabetes_insulinodependiente"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/chkCritico" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/clase_funcional_nyha"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/chkDiabetes" />

                <Spinner
                    android:id="@+id/spNYHA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:entries="@array/a_nyha"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                <CheckBox
                    android:id="@+id/chkCCS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/angina_clase_4_de_la_ccs"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/funci_n_venricular"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/chkCCS" />

                <Spinner
                    android:id="@+id/spFEVI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:entries="@array/a_fevi"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5" />

                <CheckBox
                    android:id="@+id/chkIAM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/iam_reciente"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/htp"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/chkIAM" />

                <Spinner
                    android:id="@+id/spHTP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:entries="@array/a_htp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/urgencia"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <Spinner
                    android:id="@+id/spUrgencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:entries="@array/a_urgencia"
                    app:layout_constraintBottom_toBottomOf="@+id/textView7"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/relevancia"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <Spinner
                    android:id="@+id/spRelevancia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:entries="@array/a_relevancia"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toTopOf="@+id/textView8" />


                <CheckBox
                    android:id="@+id/chkAortica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:text="@string/cirug_a_a_rtica"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="21dp"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>